--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://jpedro.github.io/"
+baseURL = "https://tinytext.github.io/"
 languageCode = "en-us"
-title = "jpedro"
+title = "tinytext"
 theme = "jpedro"
